Inquire on how to use playwright

--- a/site/gatsby-site/package.json
+++ b/site/gatsby-site/package.json
@@ -122,7 +122,9 @@
     "@babel/plugin-proposal-export-default-from": "^7.23.3",
     "@cypress/code-coverage": "^3.12.15",
     "@netlify/plugin-gatsby": "^3.7.0",
+    "@playwright/test": "^1.44.1",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "^20.12.13",
     "autoprefixer": "^10.4.7",
     "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.1.1",
