--- a/.github/workflows/test-playwright-e2e.yml
+++ b/.github/workflows/test-playwright-e2e.yml
@@ -121,6 +121,8 @@ jobs:
           SITE_URL: http://localhost:8000
           NEXTAUTH_URL: http://localhost:8000
           NEXTAUTH_SECRET: 678x1irXYWeiOqTwCv1awvkAUbO9eHa5xzQEYhxhMms= # only used in local tests
+          GATSBY_PRISMIC_REPO_NAME: dummy
+          PRISMIC_ACCESS_TOKEN: dummy
 
       - name: Upload Playwright traces
         if: failure()
