--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -63,6 +63,8 @@ jobs:
           SITE_URL: http://localhost:8000
           NEXTAUTH_URL: http://localhost:8000
           NEXTAUTH_SECRET: 678x1irXYWeiOqTwCv1awvkAUbO9eHa5xzQEYhxhMms=
+          GATSBY_PRISMIC_REPO_NAME: dummy
+          PRISMIC_ACCESS_TOKEN: dummy
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
