--- a/.github/workflows/process-briefing-notifications.yml
+++ b/.github/workflows/process-briefing-notifications.yml
@@ -39,4 +39,6 @@ jobs:
           NEXTAUTH_SECRET: dummy # No actual secret needed unless sending magic links
           GATSBY_PRISMIC_REPO_NAME: ${{ vars.GATSBY_PRISMIC_REPO_NAME }}
           PRISMIC_ACCESS_TOKEN: ${{ secrets.PRISMIC_ACCESS_TOKEN }}
+          GOOGLE_TRANSLATE_API_KEY: ${{ secrets.GOOGLE_TRANSLATE_API_KEY }}
+          MONGODB_TRANSLATIONS_CONNECTION_STRING: ${{ secrets.MONGODB_TRANSLATIONS_CONNECTION_STRING }}
         run: npm run process-briefing-notifications:ci 
