Add secret inherit to yml

--- a/.github/workflows/briefing-production.yml
+++ b/.github/workflows/briefing-production.yml
@@ -8,5 +8,6 @@ on:
 jobs:
   call-briefing:
     uses: ./.github/workflows/process-briefing-notifications.yml
+    secrets: inherit
     with:
       environment: production 
